syntax = "proto3";
package tokenization;

import "google/protobuf/any.proto";
import "tokenization/balances.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/tokenization/types";

/* 
  This message defines the metadata for specific token IDs.
  The interpretation of this metadata should follow the collection standard.
*/
message TokenMetadata {
  // The URI (Uniform Resource Identifier) associated with the token metadata.
  string uri = 1;
  
  // Custom data or additional information related to the token metadata.
  string customData = 2;
  
  // The token IDs to which this metadata applies.
  repeated UintRange tokenIds = 3;
}

/* 
  This message defines the metadata for the collection.
  The interpretation of this metadata should follow the collection standard.
*/
message CollectionMetadata {
  // The URI (Uniform Resource Identifier) associated with the collection metadata.
  string uri = 1;
  
  // Custom data or additional information related to the collection metadata.
  string customData = 2;
}

/* 
  This message defines the metadata for paths (alias paths and cosmos coin wrapper paths).
  The interpretation of this metadata should follow the collection standard.
*/
message PathMetadata {
  // The URI (Uniform Resource Identifier) associated with the path metadata.
  string uri = 1;
  
  // Custom data or additional information related to the path metadata.
  string customData = 2;
}
